fix:Librerias problematicas